--- a/.env
+++ b/.env
@@ -61,3 +61,7 @@ NOTIFICATION_VIEWS_INTERVAL=20
 
 # Local disk for storage
 DISK_STORAGE_PATH=disk
+
+# Auth keys
+AUTH_PUBLIC_KEY_PATH=keys/public.pem
+AUTH_PRIVATE_KEY_PATH=keys/private.pem
