add login route

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "useTabs": false,
+  "semi": true,
+  "trailingComma": "all",
   "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 80,
+  "tabWidth": 2
 }
