--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "class-validator": "^0.14.0",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
