--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Template: Generate Feature",
       "type": "shell",
-      "command": "npx nest generate ${input:featureName} & npx nest generate controller ${input:featureName} --no-spec & npx nest generate service ${input:featureName} --no-spec",
+      "command": "npx ts-node .templates/feature.generator.ts ${input:featureName}",
       "presentation": {
         "reveal": "never",
         "panel": "shared"
