--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ CORS_URL=*
 
 # Databse 
 # YOUR_MONGO_DB_NAME
-DB_NAME=wimm-dev-db
+DB_NAME=wimm-db
 DB_MIN_POOL_SIZE=2
 DB_MAX_POOL_SIZE=5
 
@@ -26,15 +26,16 @@ DB_HOST=localhost
 DB_PORT=27017
 
 #YOUR_MONGO_DB_USER_NAME
-DB_USER=wimm-dev-db-user
+DB_USER=wimm-db-user
 
 #YOUR_MONGO_DB_USER_PWD
 DB_USER_PWD=changeit
 
 # Redis 
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=changeit
+REDIS_TTL=60
 
 # Log
 # Example '/home/node/logs'
