--- a/.env.example
+++ b/.env.example
@@ -12,27 +12,30 @@ PORT=3000
 #Cors
 CORS_URL=*
 
-# Databse 
-# YOUR_MONGO_DB_NAME
-DB_NAME=wimm-db
-DB_MIN_POOL_SIZE=2
-DB_MAX_POOL_SIZE=5
 
-#localhost or IP of the server
-# If using the docker installation then use 'mongo' for host name else localhost or ip or db server
-#YOUR_MONGO_DB_HOST_NAME 
-DB_HOST=localhost
+# Databse 
+# on localmachine
+# DB_HOST=localhost
+# on docker
+DB_HOST=mongo
+
+DB_ADMIN=admin
+DB_ADMIN_PWD=changeit
 
 DB_PORT=27017
 
-#YOUR_MONGO_DB_USER_NAME
+DB_NAME=wimm-db
 DB_USER=wimm-db-user
-
-#YOUR_MONGO_DB_USER_PWD
 DB_USER_PWD=changeit
 
+DB_MIN_POOL_SIZE=2
+DB_MAX_POOL_SIZE=5
+
 # Redis 
-REDIS_HOST=localhost
+# on localmachine
+# REDIS_HOST=localhost
+# on docker
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=changeit
 REDIS_TTL=60
