add test configurations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "editor.detectIndentation": false,
   "editor.tabSize": 2,
   "typescript.validate.enable": true,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "jestrunner.codeLensSelector": "**/*.{test,spec,e2e-spec}.{js,ts}"
 }
