--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:unit": "jest '.*\\.spec\\.ts$'",
-    "test:e2e": "jest '.*\\.e2e-spec\\.ts$'"
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:cov": "NODE_ENV=test jest --coverage",
+    "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:unit": "NODE_ENV=test jest '.*\\.spec\\.ts$'",
+    "test:e2e": "NODE_ENV=test jest '.*\\.e2e-spec\\.ts$'"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.2.0",
