--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "NODE_ENV=test jest --runInBand",
     "test:watch": "NODE_ENV=test jest --watch",
-    "test:cov": "NODE_ENV=test jest --coverage",
+    "test:cov": "NODE_ENV=test jest --coverage --runInBand",
     "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest",
     "test:unit": "NODE_ENV=test jest '.*\\.spec\\.ts$'",
     "test:e2e": "NODE_ENV=test jest '.*\\.e2e-spec\\.ts$' --runInBand"
