--- a/.github/workflows/docker_compose.yml
+++ b/.github/workflows/docker_compose.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Create .env
       run: cp .env.example .env
+    - name: Create .env.test
+      run: cp .env.test.example .env.test
     - name: Create public.pem
       run: cp keys/public.pem.example keys/public.pem
     - name: Create private.pem
