add tester docker

--- a/.github/workflows/docker_compose.yml
+++ b/.github/workflows/docker_compose.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Run docker images
       run: docker-compose up -d
     - name: Run tests
-      run: docker exec -t app npm test
+      run: docker exec -t tester npm test
     - name: Clean up
       if: success() || failure()
       run: docker-compose down --rmi all -v --remove-orphans
