--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "learn-nestjs",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "wimm-apis",
+  "version": "1.0.0",
+  "description": "backend project",
+  "author": "fifocode",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "scripts": {
     "postinstall": "ts-node .resources/init-project.ts",
     "build": "nest build",
@@ -22,52 +22,54 @@
     "test:e2e": "NODE_ENV=test jest '.*\\.e2e-spec\\.ts$' --runInBand"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.2.2",
-    "@nestjs/common": "^10.3.10",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.3.10",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mapped-types": "^2.0.5",
-    "@nestjs/mongoose": "^10.0.6",
-    "@nestjs/platform-express": "^10.3.10",
-    "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
-    "cache-manager": "^5.7.1",
-    "cheerio": "^1.0.0-rc.12",
+    "@keyv/redis": "^4.4.0",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/common": "^11.1.1",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/platform-express": "^11.1.1",
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "cache-manager": "^6.4.3",
+    "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "mongoose": "^8.4.4",
-    "redis": "^4.6.15",
-    "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1",
-    "winston": "^3.13.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "class-validator": "^0.14.2",
+    "mongoose": "^8.15.0",
+    "redis": "^5.1.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.1",
-    "@nestjs/schematics": "^10.1.2",
-    "@nestjs/testing": "^10.3.10",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.1",
     "@types/bcrypt": "^5.0.2",
-    "@types/cheerio": "^0.22.35",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.14.9",
-    "@types/supertest": "^2.0.16",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "@types/cheerio": "^1.0.0",
+    "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.15.21",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.5",
-    "ts-loader": "^9.5.1",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
